chore: updated css to look more like chatbot

--- a/src/app/chatbot/app-prompt/prompt.component.html
+++ b/src/app/chatbot/app-prompt/prompt.component.html
@@ -1,4 +1,4 @@
 <div class="chat-prompt-input">
   <input type="text" [(ngModel)]="userInput" (keydown.enter)="sendMessage()" placeholder="Type your message...">
-  <button (click)="sendMessage()">Send</button>
+  <button (click)="sendMessage()"><mat-icon fontIcon="send"></mat-icon></button>
 </div>
