--- a/src/app/chatbot/app-prompt/prompt.component.css
+++ b/src/app/chatbot/app-prompt/prompt.component.css
@@ -1,27 +1,34 @@
 .chat-prompt-input {
+  padding: 10px;
   display: flex;
   align-items: center;
-  padding: 10px 0 10px 0;
-  border-top: 1px solid #ccc;
+  gap: 10px;
 }
 
 .chat-prompt-input input {
   flex: 1;
-  padding: 8px;
-  border: none;
+  padding: 10px;
+  border: 1px solid #ccc;
   border-radius: 20px;
   outline: none;
 }
 
 .chat-prompt-input button {
-  background-color: #3f51b5;
+  background-color: rgb(98, 102, 106);
   color: white;
   border: none;
-  border-radius: 20px;
-  padding: 8px 16px;
-  margin-left: 10px;
+  border-radius: 8px;
+  padding: 5px;
   cursor: pointer;
-  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #000 !important;
+  }
+
+  .mat-icon {
+    width: 24px;
+    height: 20px
+  }
 }
 
 .chat-prompt-input button:hover {
