--- a/src/app/chatbot/chatbot.component.css
+++ b/src/app/chatbot/chatbot.component.css
@@ -2,41 +2,55 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
-  z-index: 1000;
   cursor: pointer;
-  color: slategray;
 }
 
 .chatbox {
   position: fixed;
-  bottom: 80px; /* Adjust this value according to your layout */
+  bottom: 80px;
+  /* Adjust this value according to your layout */
   right: 20px;
   width: 300px;
-  height: 400px;
-  background-color: #fff;
-  border: 1px solid #ccc;
+  height: 500px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 10px;
   display: none;
 
   .header {
-    border-bottom-style: solid;
-    border-bottom-color: grey;
+    background: rgb(98, 102, 106);
+    color: rgb(255, 255, 255);
+    padding: 8px 16px;
+    font-weight: bold;
+    display: flex;
+    gap: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
-    h2, h6 {
-      margin: 0;
+    .header-icon {
+      width: 27px;
+      height: 27px;
+      background-color: #fff;
+      border-radius: 50%;
+      position: relative;
+
+      .online {
+        width: 8px;
+        height: 8px;
+        background-color: green;
+        border-radius: 50%;
+        position: absolute;
+        bottom: 0px;
+        right: 0px;
+        border: 1px solid white;
+      }
+
+      img {
+        margin-left: 1px;
+      }
     }
 
-    .right-align {
-      display: flex;
-      flex-direction: row-reverse;
+    h2 {
+      margin: 0px;
     }
-  }
-
-  .footer{
-    border-top-style: solid;
-    border-top-color: grey;
 
   }
 }
