--- a/src/app/chatbot/chatbot.component.html
+++ b/src/app/chatbot/chatbot.component.html
@@ -1,14 +1,21 @@
 <div class="chatbot-icon" (click)="toggleChatbox()">
-  <mat-icon aria-hidden="false" fontIcon="chat"></mat-icon>
+  <img
+    src="https://driftt.imgix.net/https%3A%2F%2Fdriftt.imgix.net%2Fhttps%253A%252F%252Fs3.us-east-1.amazonaws.com%252Fcustomer-api-avatars-prod%252F2017946%252F894b2bb47b0b8cb227c4ff602c68b287rt9e8rbanp7g%3Ffit%3Dmax%26fm%3Dpng%26h%3D200%26w%3D200%26s%3D84c40ecd18addf6b832a18294199e32a?fit=max&fm=png&h=200&w=200&s=de6a26cff3e6706c2875de066e851fc6"
+    alt="Logo" width="50px" height="50px" />
 </div>
 
 <div class="chatbox" [ngClass]="{ open: chatboxOpen }">
-    <div class="header">
-      <h2>Angular Mantra assistant!</h2>
-      <h6 class="right-align">- Powered by OpenAI</h6>
+  <div class="header">
+    <div class="header-icon">
+      <img
+    src="https://driftt.imgix.net/https%3A%2F%2Fdriftt.imgix.net%2Fhttps%253A%252F%252Fs3.us-east-1.amazonaws.com%252Fcustomer-api-avatars-prod%252F2017946%252F894b2bb47b0b8cb227c4ff602c68b287rt9e8rbanp7g%3Ffit%3Dmax%26fm%3Dpng%26h%3D200%26w%3D200%26s%3D84c40ecd18addf6b832a18294199e32a?fit=max&fm=png&h=200&w=200&s=de6a26cff3e6706c2875de066e851fc6"
+    alt="Logo" width="25px" height="25px" />
+    <div class="online"></div>
     </div>
-    <app-conversation class="chatbox-conversation" [messages]="messages"></app-conversation>
-    <div class="footer">
-      <app-prompt (textChange)="handlePromptChange($event)"></app-prompt>
-    </div>
+    <h2>Ike Bot</h2>
+  </div>
+  <app-conversation class="chatbox-conversation" [messages]="messages"></app-conversation>
+  <div class="footer">
+    <app-prompt (textChange)="handlePromptChange($event)"></app-prompt>
+  </div>
 </div>
