--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,6 +4,9 @@ mat-toolbar {
     left: 0;
     right: 0;
     z-index: 1000; /* Ensure it stays on top of other content */
+    background-color: #f0f2f5;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    color: rgb(0, 0, 0);
   }
   
   .spacer {
