--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span>Angular Mantra</span>
+      <span>GuideIT</span>
       <span class="spacer"></span>
     </mat-toolbar-row>
   </mat-toolbar>
